main/www/css/style.css
* {
  margin: 0;
}

html, body {
  height: 100%;
}

.app-container {
  max-height: 49.5vh !important;
}

.panel-content div:not(:first-child) {
  border-top: #b3b3b3 solid 1px;
  padding-top: 10px;
}

.panel {
  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23) !important;
}

.panel-header-title {
  text-transform: none !important;
}

.panel-header-dismiss > svg {
  transition: transform 0.3s ease-in-out;
}

.panel-header-dismiss > svg:hover {
  transform: scale(125%);
}

.irs-bar {
  border-top: 1px solid #002145 !important;
  border-bottom: 1px solid #002145 !important;
  background: #002145 !important;
}

.irs-from, .irs-to {
  background: #002145 !important;
}

.selectize-input.focus {
  border-color: #002145 !important;
  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0, 0, 4px rgba(0, 33, 69, 0.6) !important;
}

.content {
  min-height: 100%;
  margin-bottom: -50px;
}

.content:after {
  content: "";
  display: block;
}

#header, footer {
  background: #002145;
}

#header {
  min-height: 100px;
}

a:hover {
  cursor: pointer;
}

#options {
  padding-bottom: 0;
}

#options > div > div {
  display: flex;
  flex: 1;
}

.well[well-name] {
  padding-top: 14px;
  flex: 1
}

.well[well-name]:before {
  content: attr(well-name);
  margin-bottom: 10px;
  display: inline-block;
  font-weight: 700;
}

.help-block {
  margin-top: -15px;
}

table.dataTable.no-footer {
  width: 100% !important;
}

.timestamp {
  font-size: 1.3rem;
  margin-left: 1rem;
}

.cf-cat {
  font-variant: small-caps;
  text-align: right;
}

.modal-lg {
  width: 90vw !important;
  margin-top: 5vh;
}

.modal-body > .row > .col-sm-10,
.modal-body > .row > .col-sm-10 > .shiny-spinner-output-container,
.modal-body > .row > .col-sm-10 > .shiny-spinner-output-container > #plot {
  height: 100% !important;
}

.modal-body > .row > .col-sm-2 > .shiny-input-container, .inputs > .well > .shiny-input-container:not(:first-child) {
  margin-top: 15px;
}

.popover {
  overflow-y: auto;
  max-height: 500px;
  max-width: 893px;
}

.circlepackeR > svg {
  width: 100% !important;
}

.circlepackeR > svg > g {
  transform: translate(50%, 50%) !important;
}

.noUi-connect {
  background-color: #002145 !important;
}

.spark > canvas {
  height: 100% !important;
}

thead > tr > td > div[style*="position: absolute"] {
  z-index: 99999;
}

input.form-control[disabled] {
  display: none;
}

.dt-buttons {
  float: right !important;
}

.dataTables_filter {
  margin-right: 10px;
}

.dataTables_filter > label {
  margin-bottom: 0;
  margin-top: 0.25em;
}

input[type="search"] {
  font-weight: normal;
  line-height: 1.6em;
}

.loader {
  /* top: 50% !important;
  position: relative !important;
  color: unset !important; */
  background: unset !important;
}

footer, .content:after {
  height: 50px;
}

footer {
  color: white;
  line-height: 50px;
  margin-left: -15px;
  margin-right: -15px;
}

footer > a:focus, footer > a:hover {
  color: lightgrey;
}

